# examples

./: README  TODO
apps/: notes.txt
apps/addressbook/: adddialog.cpp  adddialog.h  addresswidget.cpp  addresswidget.h  main.cpp  mainwindow.cpp  mainwindow.h  newaddresstab.cpp  newaddresstab.h  tablemodel.cpp  tablemodel.h
apps/mymovies/: Makefile  addeditmoviedlg.py  addeditmoviedlg.ui  moviedata.py  mymovies.pyw  resources.qrc
apps/ships/: richtextlineedit.py  ships-delegate.pyw  ships-dict.pyw  ships.py
apps/slgc/: README  cfigure.m  create_heatmap.sh  list_data.sh  slgc_collect_data.py  slgc_create_image.m  slgc_process_data.py
autoconf/openismus/: README
autoconf/openismus/examplelib-0.3.0/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  examplelib-1.0.pc.in  ltmain.sh
autoconf/openismus/examplelib-0.3.0/examplelib/: Makefile.am  Makefile.in  examplelib.h  something.cc  something.h
autoconf/openismus/examplelib-0.3.0/examplelib/sub/: Makefile.am  Makefile.in  sub.cc  sub.h
autoconf/openismus/examplelib_example-0.3.0/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
autoconf/openismus/examplelib_example-0.3.0/src/: Makefile.am  Makefile.in  main.cc
autoconf/openismus/helloworld_cc-0.3/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
autoconf/seul.org/: README
autoconf/seul.org/autotut-1.0/: index.html
autoconf/seul.org/autotut-1.0/examples/dinnersuite-0.0.1/dinnerd/: DiningHackers.txt  Makefile.in  configure  configure.in  dinnerd.8  dinnerd.c
autoconf/seul.org/autotut-1.0/examples/dinnersuite-0.0.1/libdinner/: Makefile.am  configure  configure.in
autoconf/seul.org/autotut-1.0/examples/gdu-0.0.1/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  about.xpm  aclocal.m4  back.xpm  config.h.in  configure  configure.in  gdu.1x  gdu.cc  gdu.h  home.xpm  reload.xpm  root.xpm  stop.xpm  tree.cc
autoconf/seul.org/autotut-1.0/examples/hungryhacker-0.0.1/: AUTHORS  Makefile.am  Makefile.in  config.h.in  configure  configure.in
autoconf/seul.org/autotut-1.0/examples/vdinner-0.0.1/: AUTHORS  Makefile.in  NEWS  README  config.h.in  configure  configure.in
autoconf/seul.org/autotut-1.0/examples/vdinner-0.0.1/src/: Makefile.am  Makefile.in  models.c  vdinner.1x  vdinner.c
blitz/: Makefile  Makefile.deps  README  cfd.cpp  deriv.cpp  erf.cpp  fixed.cpp  indirect.cpp  matmult.cpp  numinquire.cpp  pick.cpp  qcd.cpp  rangexpr.cpp  reduce.cpp  stencil.cpp
boost/fs/: Makefile  file_size.cpp  first.cpp  furls  listing0.cpp  listing1.cpp  listing10.cpp  listing5.cpp  listing8.cpp  listing9.cpp  sample.cpp  second.cpp  simple_ls.cpp
boost/graph/: Makefile  file_dependencies.cpp
boost/misc/: SConstruct  lexical_cast_example.cpp  noncopyable_test.cpp  split_example.cpp
boost/opts/: Makefile  custom_syntax.cpp  first.cpp  multiple_sources.cfg  multiple_sources.cpp  real.cpp  regex.cpp
boost/pointers/: Makefile  SConstruct  X.cpp  X.hpp  file.cpp  file.hpp  shared_ptr_default.cpp  shared_ptr_example.cpp  shared_ptr_example2.cpp  shared_ptr_example2_definition.cpp  shared_ptr_example2_definition.hpp
boost/python/: Makefile  SConstruct  furls  test_hello.py
cgal/: simple.cpp
cpp/: atoi.c  cidr.c  limits.cpp  sizeof.c  stat.c
dev/: TODO
dev/simplehash/: README  hash.c  hash.h
django/mysite/: settings.py  urls.py
django/mysite/polls/: models.py
dlopen/: Makefile  cos2.c  cpp-howto.html  create_lib.html  furls  hello.cpp  main1.cpp  main2.cpp  polygon.hpp  triangle.cpp
etc/: .inputrc  .screenrc
ginac/: Makefile  hello.cc  hermite.cc
ginac/simple/: Makefile.am  README  configure.ac  simple.cpp
gsl/: Makefile  bsplines.c  dgemm.c  eig_hil4.c  j0.c  lu.c  pulse_fft.c  rosenbrock.c
guile/tortoise/: Makefile  README  tortoise1.c  tortoise2.c  tortoise3.c  tortoise4.c  tortoise5.c  tutorial.html
haskell/kapp3/: KApp3.hs  Makefile  README
hdf5/cpp/: create.cpp  group.cpp  readdata.cpp  strtype.cpp
hdf5/h5io/: Makefile  Makefile.dep  h5array.c  h5attr.c  h5dset.c  h5file.c  h5group.c  h5io.h  split.c  split.h
hdf5/h5io/t/: Makefile  test_h5dset.c  test_h5file.c  test_h5group.c
hdf5/serial/: Makefile  SDS.h5  group.c  read.c  write.c
hello/: Makefile  hello.asm  hello.c
java/: SierpinskiCarpet.java
lua/cpp/: Makefile  README  add.c  add.lua  average.c  do-me.c  do-me.lua  init.c
mpi/: README
mpi/hello/: Makefile  mpihello.c  run.sh
mpi/pi/: Makefile  pi.c  run.sh
ncurses/: Makefile  add1.c  add2.c  add3.c  cls.c  goodbye.c  string1.c  typewriter.c  yoda.c
numpy/gridloop/: Makefile  gridloop.c  gridloop.f  gridloop3.c  gridloop3.h  gridloop3_wrap.c  langtangen.py  numpy_macros.h  tests.py
python/boost/: README
python/boost/conversion/: custom_rvalue.cpp  test.py  tuples.hpp
python/boost/exceptions/: sconstruct  test.py
python/boost/hello/: hello.cpp  sconstruct  testhello.py
python/boost/shared_ptr/: pointer_holder.hpp.patch  test.py
python/boost/smart_ptrs/: bindings.cpp  sconstruct  smart_ptr.h  test.py
python/cpp/: README
python/cpp/hello/: README
python/matplotlib/: simple-loglog-plot.py
python/sip/: hello.cpp  hello.sip  setup.py
qt4/: README
qt4/hellogl/: glwidget.cpp  glwidget.h  hellogl.pro  main.cpp  window.cpp  window.h
qwt/: common.pro
qwt/simpleplot/: simpleplot.cpp  simpleplot.pro
qwt/svgmap/: main.cpp  plot.cpp  plot.h  svgmap.pro
sqlite3/: Makefile  myquery.c  stocks1.py  stocks2.py
testing/python/: minimal_example.py
utils/: ssh-agent.pl  svn-vimdiff.py
utils/argp/: Makefile  argp-ex1.c  argp-ex2.c  argp-ex3.c  argp-ex4.c  furls
utils/argtable2/: Makefile  Makefile.deps  argcustom.c  argxxx.c  argxxx.h  callbacks.c  echo.c  furls  hasoptvalue.c  ls.c  multisyntax.c  mv.c  myprog.c  rm.c  uname.c
utils/iniparser/: README
utils/optcomplete/: notes  optcomplete-simple  optcomplete.bash  optcomplete.py
utils/readline/: Makefile  fileman.c  furls
vtk/: CheckVtkVersion.cpp
xlib/: Makefile  first.c  furls  info.c  second.c
(+90 files in other folders)
